--- a/web/TECAir_Reservations/package.json
+++ b/web/TECAir_Reservations/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.7",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -20,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.8",
+    "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "jquery": "^3.7.1",
