--- a/web/TECAir_Reservations/.hintrc
+++ b/web/TECAir_Reservations/.hintrc
@@ -8,7 +8,8 @@
       {
         "ignore": [
           "-webkit-mask-image",
-          "-webkit-tap-highlight-color"
+          "-webkit-tap-highlight-color",
+          "user-select"
         ]
       }
     ]
