--- a/web/TECAir_Reservations/.vscode/settings.json
+++ b/web/TECAir_Reservations/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Aname", "Uemail", "unumber", "upassword", "userw"]
+  "cSpell.words": [
+    "Aname",
+    "Pemail",
+    "Sclass",
+    "Snumber",
+    "Uemail",
+    "unumber",
+    "upassword",
+    "userw"
+  ]
 }
