--- a/web/TECAir_Reservations/package.json
+++ b/web/TECAir_Reservations/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.11.1",
     "jquery": "^3.7.1",
     "normalize.css": "^8.0.1",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -36,6 +37,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
