feat: SQL Function mixed with a get in the API
Created get function in API that uses an advanced SQL code to retrieve all the available flights (Those that have available seats, and are in the range of time)

--- a/api/TECAirAPI/appsettings.json
+++ b/api/TECAirAPI/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
-  }
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
+        "TECAir": "Host=localhost; Database=tarea2; Username=postgres; Password=5049"
+    }
 }
