fix: User now can be passenger of multiple flights

--- a/api/TECAirAPI/appsettings.json
+++ b/api/TECAirAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
-        "TECAir": "Host=localhost; Database=tarea2; Username=postgres; Password=5049"
+        "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
+        //"TECAir": "Host=localhost; Database=tarea2; Username=postgres; Password=5049"
     }
 }
