--- a/web/TECAir_Reservations/.vscode/settings.json
+++ b/web/TECAir_Reservations/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
   "cSpell.words": [
-    "Aname",
-    "Bnumber",
-    "Pemail",
-    "Sclass",
-    "Sfrom",
-    "Snumber",
+    "aname",
+    "bnumber",
+    "pemail",
+    "sclass",
+    "sfrom",
+    "snumber",
     "uemail",
     "unumber",
     "upassword",
