feat: add usser api

--- a/api/TECAirAPI/appsettings.json
+++ b/api/TECAirAPI/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
-        "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=5049"
-    }
+  "ConnectionStrings": {
+    //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
+    //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=5049",
+    
+    "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=CA12postgre"
+  }
 }
