feat: app conectting

--- a/web/TECAir_Reservations/.vscode/settings.json
+++ b/web/TECAir_Reservations/.vscode/settings.json
@@ -5,7 +5,12 @@
     "pemail",
     "sclass",
     "sfrom",
+    "sfromairportid",
+    "sfromcity",
     "snumber",
+    "stoairportid",
+    "stocity",
+    "stutdentid",
     "uemail",
     "unumber",
     "upassword",
