feat:information seugre to papges

--- a/web/TECAir_Reservations/.vscode/settings.json
+++ b/web/TECAir_Reservations/.vscode/settings.json
@@ -2,6 +2,8 @@
   "cSpell.words": [
     "aname",
     "bnumber",
+    "generatepdf",
+    "Generatepdf",
     "pemail",
     "sclass",
     "sfrom",
@@ -10,6 +12,7 @@
     "snumber",
     "stoairportid",
     "stocity",
+    "studentid",
     "stutdentid",
     "uemail",
     "unumber",
