--- a/web/TECAir_Reservations/.vscode/settings.json
+++ b/web/TECAir_Reservations/.vscode/settings.json
@@ -3,6 +3,10 @@
     "adminid",
     "aname",
     "bnumber",
+    "depercent",
+    "fdate",
+    "fnumber",
+    "fprice",
     "generatepdf",
     "Generatepdf",
     "pemail",
@@ -13,6 +17,8 @@
     "snumber",
     "stoairportid",
     "stocity",
+    "stoimage",
+    "stopid",
     "studentid",
     "stutdentid",
     "uemail",
