--- a/web/TECAir_Reservations/.vscode/settings.json
+++ b/web/TECAir_Reservations/.vscode/settings.json
@@ -2,15 +2,19 @@
   "cSpell.words": [
     "adminid",
     "aname",
+    "arrivalhour",
     "bnumber",
+    "departurehour",
     "depercent",
     "fdate",
+    "finalprice",
     "fnumber",
     "fprice",
     "generatepdf",
     "Generatepdf",
     "pemail",
     "sclass",
+    "sdate",
     "sfrom",
     "sfromairportid",
     "sfromcity",
