--- a/api/TECAirAPI/appsettings.json
+++ b/api/TECAirAPI/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
   "ConnectionStrings": {
     //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
-    "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=5049"
-    //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=CA12postgre"
+    //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=5049"
+    "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=CA12postgre"
   }
 }
