--- a/api/TECAirAPI/appsettings.json
+++ b/api/TECAirAPI/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=2002"
     //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=5049"
-    "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=CA12postgre"
+    //"TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=CA12postgre",
+    "TECAir": "Host=localhost; Database=TECAir; Username=postgres; Password=1234"
   }
 }
